# Build-AI

./: .gitignore  INICIAR.bat  INSTALAR.bat  README.md  build_installer.ps1  pyproject.toml  requirements.txt
addons/blender/: buildai_blender.py
addons/revit/BuildAI.extension/: startup.py
build_pkg/: BuildAI.iss  buildai.spec  run_buildai.py
buildai/: __init__.py  agent.py  config.py  instalador.py  main.py  memoria.py  modelos.py  rutas.py  sesiones.py  skills.py
buildai/addons/blender/: buildai_blender.py
buildai/addons/revit/: LEEME.txt
buildai/addons/revit/BuildAI.extension/: startup.py
buildai/addons/sketchup/: buildai_sketchup.rb
buildai/connectors/: __init__.py  autocad.py  base.py  blender.py  blender_kit.py  revit.py  revit_kit.py  sketchup.py
buildai/providers/: __init__.py  anthropic_provider.py  base.py  openai_compat.py
buildai/skills_data/: 01-casa-basica.json  06-muros-revit.json  09-interiorismo.json  12-fachada-propuestas.json  13-interior-llave-en-mano.json  15-bano-diseno.json  21-diseno-bioclimatico.json
buildai/ui/: app.js  icons.js  index.html  manual.html  style.css
skills/: 02-resumen-modelo.json  03-limpiar-capas.json  04-planta-acotada.json  05-luces-render.json  07-casa-moderna.json  08-edificio-viviendas.json  10-render-fotorrealista.json  11-diseno-fachada.json  14-cocina-diseno.json  16-iluminacion-interior.json  17-paisajismo-jardin.json  18-reforma-redistribucion.json  19-local-comercial.json  20-vivienda-accesible.json
tests/: test_adjuntos_historial.py  test_sanear_adjuntos.py
website/: index.html
