[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "buildai"
version = "0.1.0"
description = "Asistente de IA para arquitectos: controla Revit, AutoCAD, SketchUp y Blender hablando en tu idioma."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "anthropic>=0.90",
    "pywebview>=5.3",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
buildai = "buildai.main:arrancar"
buildai-instalar = "buildai.instalador:instalar_todos"

[tool.setuptools.packages.find]
include = ["buildai*"]

[tool.setuptools.package-data]
buildai = [
    "ui/*.html",
    "ui/*.js",
    "ui/*.css",
    "ui/assets/*.png",
    "ui/assets/*.ico",
    "skills_data/*.json",
    "addons/blender/*.py",
    "addons/sketchup/*.rb",
    "addons/revit/*.txt",
    "addons/revit/BuildAI.extension/*.py",
]
